tests/warn/i16451.check
-- [E030] Match case Unreachable Warning: tests/warn/i16451.scala:14:9 -------------------------------------------------
14 |    case x: Wrapper[Color.Green.type] => None    // warn: unreachable // warn: unchecked
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         Unreachable case
-- [E030] Match case Unreachable Warning: tests/warn/i16451.scala:22:9 -------------------------------------------------
22 |    case x: Wrapper[Color.Green.type] => None    // warn: unreachable // warn: unchecked
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |         Unreachable case
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:13:9 ------------------------------------------------
13 |    case x: Wrapper[Color.Red.type]   => Some(x)                      // warn: unchecked
   |         ^
   |the type test for Wrapper[(Color.Red : Color)] cannot be checked at runtime because its type arguments can't be determined from Wrapper[Color]
   |
   | longer explanation available when compiling with `-explain`
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:14:9 ------------------------------------------------
14 |    case x: Wrapper[Color.Green.type] => None    // warn: unreachable // warn: unchecked
   |         ^
   |the type test for Wrapper[(Color.Green : Color)] cannot be checked at runtime because its type arguments can't be determined from Wrapper[Color]
   |
   | longer explanation available when compiling with `-explain`
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:21:9 ------------------------------------------------
21 |    case x: Wrapper[Color.Red.type]   => Some(x)                      // warn: unchecked
   |         ^
   |the type test for Wrapper[(Color.Red : Color)] cannot be checked at runtime because its type arguments can't be determined from Any
   |
   | longer explanation available when compiling with `-explain`
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:22:9 ------------------------------------------------
22 |    case x: Wrapper[Color.Green.type] => None    // warn: unreachable // warn: unchecked
   |         ^
   |the type test for Wrapper[(Color.Green : Color)] cannot be checked at runtime because its type arguments can't be determined from Any
   |
   | longer explanation available when compiling with `-explain`
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:25:9 ------------------------------------------------
25 |    case x: Wrapper[Color.Red.type] => Some(x) // error: unreachable // error: unchecked
   |         ^
   |the type test for Wrapper[(Color.Red : Color)] cannot be checked at runtime because its type arguments can't be determined from Wrapper[Color]
   |
   | longer explanation available when compiling with `-explain`
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:29:9 ------------------------------------------------
29 |    case x: Wrapper[Color.Red.type] => Some(x)
   |         ^
   |the type test for Wrapper[(Color.Red : Color)] cannot be checked at runtime because its type arguments can't be determined from A1
   |
   | longer explanation available when compiling with `-explain`
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:34:11 -----------------------------------------------
34 |      case x: Wrapper[Color.Red.type] => x
   |           ^
   |the type test for Wrapper[(Color.Red : Color)] cannot be checked at runtime because its type arguments can't be determined from Wrapper[Color]
   |
   | longer explanation available when compiling with `-explain`
-- [E092] Pattern Match Unchecked Warning: tests/warn/i16451.scala:39:11 -----------------------------------------------
39 |      case x: Wrapper[Color.Red.type] => x
   |           ^
   |the type test for Wrapper[(Color.Red : Color)] cannot be checked at runtime because its type arguments can't be determined from Wrapper[Color]
   |
   | longer explanation available when compiling with `-explain`
